# clac

./: .cproject  .editorconfig  .gitignore  .gitmodules  .project  AGENTS.md  C++-Style.md  CMakeLists.txt  CMakePresets.json  ClacCommandWindow.cpp  ClacCommandWindow.hpp  DirectoryWindow.cpp  DirectoryWindow.hpp  Doxyfile  Makefile  NOTES.md  README.md  RecordFile.cpp  RecordFile.hpp  StackWindow.cpp  StackWindow.hpp  TODO.md  build.sh  clac.cbp  clac.cpp  clac.sln  clac.vcxproj  clac.vcxproj.filters  clac.workspace  clean.sh  depend.dep  depend.sh  jenkins.sh  overview.hpp
ClacConsoleUI/: CMakeLists.txt  RecordFile.cpp  RecordFile.hpp  clac.cpp
ClacEngine/: CMakeLists.txt  ClacEngine.cbp  ClacStack.cpp  ClacStack.hpp  Global.cpp  Global.hpp  Makefile  WordStream.cpp  WordStream.hpp  actions.cpp  actions.hpp  clac_engine.vcxproj  clac_engine.vcxproj.filters  cstack.cpp  cstack.hpp  depend.dep  depend.sh  get.cpp  get.hpp  global.cpp  global.hpp  words.cpp  words.hpp
ClacEntity/: BinaryEntity.cpp  BinaryEntity.hpp  CMakeLists.txt  ClacEntity.cbp  ComplexEntity.cpp  ComplexEntity.hpp  DirectoryEntity.cpp  DirectoryEntity.hpp  DisplayState.cpp  DisplayState.hpp  Entities.hpp  Entity.cpp  Entity.hpp  FloatEntity.cpp  FloatEntity.hpp  IntegerEntity.cpp  IntegerEntity.hpp  LabeledEntity.cpp  LabeledEntity.hpp  ListEntity.cpp  ListEntity.hpp  Makefile  MatrixEntity.cpp  MatrixEntity.hpp  ProgramEntity.cpp  ProgramEntity.hpp  Rational.hpp  RationalEntity.cpp  RationalEntity.hpp  StringEntity.cpp  StringEntity.hpp  VectorEntity.cpp  VectorEntity.hpp  VeryLong.cpp  VeryLong.hpp  clac_entity.ruleset  clac_entity.vcxproj  clac_entity.vcxproj.filters  convert.cpp  convert.hpp  (+4 more)
ClacNotes/: Welcome.md
Clacky/: .project
aClac/: README.md  settings.gradle
benchmarks/: verylong_speed.cpp
check/: FloatEntity_tests.cpp  Makefile  UnitTestManager.cpp  UnitTestManager.hpp  VeryLong_tests.cpp  depend.dep  depend.sh  u_tests.cbp  u_tests.cpp  u_tests.hpp
doc/: Design.tex  Reference.tex  Tutorial-Introduction.tex  Tutorial-Programming.tex  Tutorial-Stack.tex  Tutorial.tex  clac_design.tex  clac_reference.tex  clac_tutorial.tex  macros.tex
docs/: Reference.tex  Tutorial-Programming.tex  Tutorial-Stack.tex  Tutorial-Types.tex  Tutorial.tex
jaClac/: README.md
test/: IntegerEntity_tests.cpp  Makefile  README.md  build.sh  u_tests.cpp  u_tests.hpp
(+46 files in other folders)
